--- a/themes/default/styles.css
+++ b/themes/default/styles.css
@@ -134,7 +134,7 @@ a {
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #0d1117;
+    background-color: #000000;
     color: white;
   }
 
